# hermes-agent

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.zh-CN.md  _build_backend.py  cli.py  conftest.py  mini_swe_runner.py  output.txt  package-lock.json  pyproject.toml  run_agent.py
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/: coderabbit.yaml  copilot-instructions.md
.github/workflows/: build-windows-installer.yml  contributor-check.yml  copilot-review.yml  deploy-site.yml  docker-lint.yml  docker-publish.yml  docs-site-checks.yml  history-check.yml  lint.yml  nix-lockfile-fix.yml  nix.yml  skills-index.yml  supply-chain-audit.yml  tests.yml  upload_to_pypi.yml  uv-lockfile-check.yml
.obsidian/: workspace.json
agent/: account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_aux.py  anthropic_format.py  auxiliary_client.py  chat_completion_helpers.py  conversation_loop.py  credential_pool.py  model_metadata.py  plugin_registries.py  usage_pricing.py
agent/transports/: __init__.py  anthropic.py
apps/bootstrap-installer/: package.json
apps/desktop/: package.json
gateway/: run.py
hermes_cli/: auth.py  auth_commands.py  doctor.py  gateway.py  main.py  model_switch.py  models.py  plugins.py  providers.py  runtime_provider.py  setup.py  voice.py  web_server.py
nix/: checks.nix  web.nix
plugins/dashboard/: __init__.py  plugin.yaml  pyproject.toml
plugins/dashboard/hermes_agent_dashboard/: __init__.py
plugins/image_gen/fal_pkg/: __init__.py  plugin.yaml  pyproject.toml
plugins/image_gen/fal_pkg/hermes_agent_fal/: __init__.py  fal_common.py
plugins/memory/hindsight/: __init__.py  pyproject.toml
plugins/memory/honcho/: client.py  pyproject.toml
plugins/model-providers/: conftest.py
plugins/model-providers/anthropic/: __init__.py  pyproject.toml
plugins/model-providers/anthropic/hermes_agent_anthropic/: __init__.py  adapter.py  credential_pool_hook.py  pricing.py  resolve.py
plugins/model-providers/anthropic/tests/: conftest.py  test_anthropic_adapter.py  test_anthropic_agent_integration.py  test_anthropic_auth_commands.py  test_anthropic_auxiliary.py  test_anthropic_computer_use.py  test_anthropic_ctx_halving.py  test_anthropic_custom_endpoint.py  test_anthropic_fast_command.py  test_anthropic_keychain.py  test_anthropic_mcp_prefix_strip.py  test_anthropic_model_flow_stale_oauth.py  test_anthropic_oauth_pkce.py  test_anthropic_third_party_oauth_guard.py  test_anthropic_timeouts.py  test_anthropic_transport.py  test_deepseek_anthropic_thinking.py  test_kimi_coding_anthropic_thinking.py  test_minimax_provider.py
plugins/model-providers/azure-foundry/: __init__.py  pyproject.toml
plugins/model-providers/azure-foundry/hermes_agent_azure/: __init__.py  adapter.py  resolve.py
plugins/model-providers/azure-foundry/tests/: conftest.py  test_auxiliary_client_azure_foundry.py  test_azure_foundry_entra.py  test_azure_identity_adapter.py
plugins/model-providers/bedrock/: __init__.py  pyproject.toml
plugins/model-providers/bedrock/hermes_agent_bedrock/: __init__.py  pricing.py  resolve.py  transport.py
plugins/model-providers/bedrock/tests/: conftest.py  test_bedrock_1m_context.py  test_bedrock_adapter.py  test_bedrock_integration.py  test_bedrock_model_picker.py  test_bedrock_transport.py
plugins/stt/: __init__.py  plugin.yaml  pyproject.toml
plugins/stt/hermes_agent_stt/: __init__.py  transcription_tools.py
plugins/stt/tests/: test_transcription.py  test_transcription_command_providers.py  test_transcription_tools.py
plugins/teams_pipeline/: pipeline.py
plugins/terminals/daytona/: __init__.py  plugin.yaml  pyproject.toml
plugins/terminals/daytona/hermes_agent_daytona/: __init__.py  daytona.py
plugins/terminals/daytona/tests/: test_daytona_environment.py
plugins/terminals/modal/: __init__.py  plugin.yaml  pyproject.toml
plugins/terminals/modal/hermes_agent_modal/: __init__.py  modal.py
plugins/terminals/modal/tests/: test_modal_sandbox_fixes.py
plugins/tts/: __init__.py  plugin.yaml  pyproject.toml
plugins/tts/hermes_agent_tts/: __init__.py  tts_tool.py
plugins/tts/tests/: test_tts_command_providers.py  test_tts_gemini.py  test_tts_kittentts.py  test_tts_max_text_length.py  test_tts_mistral.py  test_tts_path_traversal.py  test_tts_piper.py  test_tts_speed.py  test_tts_xai_speech_tags.py
plugins/web/exa/: provider.py  pyproject.toml
plugins/web/firecrawl/: provider.py  pyproject.toml
plugins/web/parallel/: provider.py  pyproject.toml
scripts/: check_no_plugin_imports_in_core.py  run_tests.sh  run_tests_parallel.py
scripts/whatsapp-bridge/: package-lock.json
tests/: test_ctx_halving_fix.py  test_packaging_metadata.py  test_project_metadata.py
tests/agent/: conftest.py  test_auxiliary_client.py  test_auxiliary_named_custom_providers.py  test_auxiliary_transport_autodetect.py  test_credential_pool.py  test_model_metadata.py  test_transcription_registry.py  test_tts_registry.py
tests/cli/: test_fast_command.py
tests/e2e/: conftest.py
tests/gateway/: conftest.py  test_allowed_channels_widening.py  test_base_topic_sessions.py  test_dm_topics.py  test_media_download_retry.py  test_platform_http_client_limits.py  test_send_image_file.py  test_send_multiple_images.py  test_send_voice_reply_notify.py  test_stream_consumer_thread_routing.py  test_stt_config.py  test_text_batching.py  test_voice_command.py  test_ws_auth_retry.py
tests/hermes_cli/: test_anthropic_oauth_flow.py  test_api_key_providers.py  test_auth_commands.py  test_model_switch_opencode_anthropic.py  test_plugin_scanner_recursion.py  test_plugins.py  test_runtime_provider_resolution.py  test_web_server_oauth_write.py
tests/run_agent/: conftest.py  test_context_token_tracking.py  test_primary_runtime_restore.py  test_run_agent.py  test_switch_model_fallback_prune.py
tests/tools/: conftest.py  test_computer_use.py  (+15 more)
tools/: image_generation_tool.py  send_message_tool.py  terminal_tool.py  voice_mode.py
ui-tui/: package.json
web/: package.json
website/: package-lock.json
(+47 files in other folders)
