[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent-modal"
version = "0.1.0"
description = "Modal serverless terminal backend for Hermes Agent"
requires-python = ">=3.11"
dependencies = [
    "hermes-agent",
    "modal==1.3.4",
]

[project.entry-points."hermes_agent.plugins"]
modal = "hermes_agent_modal:register"

[tool.setuptools.packages.find]
include = ["hermes_agent_modal*"]
