[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent-exa"
version = "1.0.0"
description = "Exa web search and content extraction for Hermes Agent"
requires-python = ">=3.11"
dependencies = [
    "hermes-agent",
    "exa-py==2.10.2",
]

[project.entry-points."hermes_agent.plugins"]
exa = "hermes_agent_exa:register"

[tool.setuptools.packages.find]
include = ["hermes_agent_exa*"]
